--- a/parte3/index.html
+++ b/parte3/index.html
@@ -8,7 +8,53 @@
     <title>desafio3 parte3</title>
 </head>
 <body>
+    <div>
+        <h3>Ingresa el password</h3>
+        <select id="num-1">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="0">0</option>
+        </select>
+        <select id="num-2">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="0">0</option>
+        </select>
+        <select id="num-3">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="0">0</option>
+        </select>
+      </div>
+      <div>
+        <p id="msg"></p>
+        <p>
+          <button id="btn">Ingresar</button>
+        </p>
+      </div>
 
     <script src="./assets/js/scripts.js"></script>
 </body>
+
 </html>
